Fixed header alignment

--- a/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
+++ b/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
@@ -88,7 +88,7 @@
     ._cer_v1_named-version-list-header {
       grid-column: 1 / 4;
       padding-block: var(--iui-size-m);
-      padding-inline: var(--iui-size-xs);
+      padding-inline: var(--iui-size-m);
       display: flex;
       gap: var(--iui-size-s);
       justify-content: space-between;
@@ -124,6 +124,7 @@
 
     ._cer_v1_named-version-entry > :first-child {
       width: 100%;
+      padding-inline: var(--iui-size-2xs);
     }
 
     ._cer_v1_action-button {
